<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ExpiryDate</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_list">List</string>
    <string name="save_date">Save Date</string>
    <string name="enter_item_name">Enter Item name</string>
    <string name="expiry_notification_title">%1$s is expiring</string>
    <string name="expiry_notification_body">Product %1$s is expiring tomorrow</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
...
    <string name="placeholder">Placeholder</string>
    <string name="maps_api_key" translatable="false">AIzaSyCjufUCy1GthewZAl_YLQOAJ4Vza_TkbMs</string>
    <string name="preference_file_key" translatable="false">ExpiryDatesPreferences</string>
    <string name="notification_day_offset_key" translatable="false">ExpiryDatesPreferencesNotificationDayOffset</string>
    <string name="notification_hour_key" translatable="false">ExpiryDatesPreferencesNotificationHour</string>
    <string name="notification_minutes_key" translatable="false">ExpiryDatesPreferencesNotificationMinutes</string>
    <string name="name_asc">Name Ascending</string>
    <string name="name_desc">Name Descending</string>
    <string name="exp_asc">Expires First</string>
    <string name="exp_desc">Expires Last</string>
    <string name="en" translatable="false">EN</string>  <!-- Should be international -->
    <string name="ru" translatable="false">RU</string>  <!-- Should be international -->
    <string name="language_settings" translatable="false">Language Settings</string>
    <string name="show_recipe">Show Recipe</string>
    <string name="recipe_image">recipe image</string>  <!-- Should be international -->
    <string name="loading">Loading</string>
...
