...
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_format_list_bulleted_24dp"
        android:title="@string/title_list" />

</menu>

