<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sortByDateMenu"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/sort_exp_asc"
                android:title="@string/exp_asc"/>

            <item
                android:id="@+id/sort_exp_desc"
                android:title="@string/exp_desc"/>

        </menu>

    </item>

</menu>
